Fix alignment of items in Thumbs on Firefox 68
`baseline` is for aligning text not inline-box.

--- a/src/css/content/thumbs.css
+++ b/src/css/content/thumbs.css
@@ -1,5 +1,5 @@
 main > section > h1 + ul {
-  align-items: baseline;
+  align-items: end;
   display: grid;
   grid-gap: var(--width-horizontal-list-gutter);
   grid-template-columns: repeat(var(--num-thumbs-columns), 1fr);
